--- a/src/public/scss/_wg.scss
+++ b/src/public/scss/_wg.scss
@@ -1534,7 +1534,7 @@ $whitepurple: #eed5e3;
   .checkboxes__label__filter {
     font-size: 14px;
     margin-top: 8px;
-    margin-left: 1em;
+    padding-left: 1em;
   }
 
   .checkboxes__input__filter {
